# sentinel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  rules.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
src/: __init__.py  main.py
src/actions/: base.py  restart.py  scale.py  start.py
src/api/: routes.py  server.py
src/collectors/: docker_async.py
src/core/: config.py  exceptions.py  logger.py
src/engine/: rules.py  state_manager.py
src/notifiers/: __init__.py  base.py  discord.py  slack.py
tests/: conftest.py  test_api.py  test_config.py  test_exited_recovery.py  test_rules_engine.py  test_state_manager.py
