[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aiodocker.*",
    "aiosqlite.*",
    "loguru.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "UP042",  # Keep (str, Enum) over StrEnum for Python 3.10 compat
    "N818",   # CircuitBreakerOpen is an intentional domain name
]

[project]
name = "sentinel"
version = "1.0.0"
description = "Docker Autonomous Orchestrator & Monitor"
requires-python = ">=3.11"
