[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aiodocker.*",
    "aiosqlite.*",
    "loguru.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "UP042",  # Keep (str, Enum) over StrEnum for Python 3.10 compat
    "N818",   # CircuitBreakerOpen is an intentional domain name
]

[tool.black]
line-length = 100
target-version = ["py311"]

[project]
name = "sentinel"
version = "1.0.0"
description = "Docker Autonomous Orchestrator & Monitor"
requires-python = ">=3.11"
dependencies = [
    "aiodocker>=0.22.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "loguru>=0.7.2",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "types-PyYAML>=6.0.0",
]
